src/styles/main.css
/* ... */
.flex-right {

  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  -moz-justify-content: flex-end;
  justify-content: flex-end;

}

.flex-top {

  -webkit-align-self: flex-start;
  -moz-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;

}

.flex-center {

  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  -moz-justify-content: center;
  justify-content: center;

}

.flex-bottom {

  -webkit-align-self: flex-end;
  -moz-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;

}

.space-between {

  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  -webkit-justify-content: space-between;
  -moz-justify-content: space-between;
  justify-content: space-between;

}

.flex-column {

  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  -moz-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;

}

.flex-cell {

  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -moz-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;

}

.relative {

  position: relative;

}

.overflow-hidden {

  overflow: hidden !important;

}

.overlay {

  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;

}

b,
sup,
sub,
u,
del {

  color: var(--color-brand);

}

h6 {

  font-size: var(--text-lg);

}

h1,
h2,
h3,
h4,
h5,
h6 {

  line-height: 1.5em;

}

/* =================================== */
/*  Menu Styles
/* =================================== */
/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
.main-menu {

  padding-bottom: var(--space-5);
  padding-top: var(--space-5);

}

#header {

  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  transition: all 0.5s;
  z-index: 997;
  background: var(--color-surface);

}

@media (max-width: 673px) {
  #logo {

    margin-left: var(--space-5);

  }
}

.nav-menu li:hover>a,
.menu-active {

  color: var(--color-brand) !important;

}

.menu-active {

  color: var(--color-brand) !important;

}

/*--------------------------------------------------------------
# Navigation Menu
--------------------------------------------------------------*/
/* Nav Menu Essentials */
.nav-menu,
.nav-menu * {

  margin: 0;
  padding: 0;
  list-style: none;

}

.nav-menu ul {

  position: absolute;
  display: none;
  top: 100%;
  right: 0;
  z-index: 99;

}

.nav-menu li {

  position: relative;
  white-space: nowrap;

}

.nav-menu>li {

  float: left;

}

.nav-menu li:hover>ul {

  display: block;

}

.nav-menu ul ul {

  top: 0;
  right: 100%;

}

.nav-menu ul li {

  min-width: 180px;

}

/* Nav Menu Arrows */
/* Nav Meu Container */
@media (max-width: 768px) {
  #nav-menu-container {

    display: none;

  }
}

/* Nav Meu Styling */
.nav-menu a {

  padding: 0 var(--space-5) 0px var(--space-5);
  text-decoration: none;
  display: inline-block;
  color: var(--color-text-primary);
  font-weight: var(--font-medium);
  font-size: var(--text-lg);
  text-transform: uppercase;
  outline: none;

}

.nav-menu-right a {

  padding: 0px;

}

.nav-menu li:hover>a {

  color: var(--color-brand);

}

.nav-menu>li {

  margin-left: var(--space-6);

}

.nav-menu ul {

  margin: var(--space-12) 0 0 0;
  padding: var(--space-6);
  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
  background: var(--color-surface);

}

.nav-menu ul li {

  transition: 0.3s;

}

.nav-menu ul li a {

  padding: var(--space-4) var(--space-6);
  color: var(--color-text-body);
  transition: 0.3s;
  display: block;
  font-size: var(--text-base);
  text-transform: none;

}

.nav-menu ul li:hover>a {

  color: var(--color-brand);

}

.nav-menu .fa {

  color: var(--color-text-near-black);
  transition: 0.3s ease-in-out;

}

.nav-menu .fa:hover {

  color: var(--color-brand);

}

.nav-menu ul ul {

  margin-right: var(--space-6);
  margin-top: 0;

}

/* Mobile Nav Toggle */
#mobile-nav-toggle {

  z-index: 999;
  border: 0;
  background: none;
  font-size: var(--text-6xl);
  display: none;
  transition: all 0.4s;
  outline: none;
  cursor: pointer;

}

#mobile-nav-toggle i {

  color: var(--color-text-primary);
  font-weight: 900;

}

@media (max-width: 991px) {
  #mobile-nav-toggle {

    display: inline;

  }

  #nav-menu-container {

    display: none;

  }
}

#mobile-nav-menu-sidebar {

  width: fit-content;
  margin: 0;

}

/* Mobile Nav Styling */
#mobile-nav {

  /* position: fixed; */
  top: 0;
  padding-top: 18px;
  bottom: 0;
  z-index: 998;
  background: rgba(0, 0, 0, 0.8);
  left: -260px;
  width: 260px;
  overflow-y: auto;
  transition: 0.4s;

}

#mobile-nav ul {

  padding: 0;
  margin: 0;
  list-style: none;

}

#mobile-nav ul li {

  position: relative;

}

#mobile-nav ul li a {

  color: var(--color-text-inverse);
  font-size: 13px;
  text-transform: uppercase;
  overflow: hidden;
  padding: 10px 22px 10px 15px;
  position: relative;
  text-decoration: none;
  width: 100%;
  display: block;
  outline: none;
  font-weight: 400;

}

#mobile-nav ul li a:hover {

  color: var(--color-text-inverse);

}

#mobile-nav ul li li {

  padding-left: 30px;

}

#mobile-nav ul .menu-has-children i {

  position: absolute;
  right: 0;
  z-index: 99;
  padding: 15px;
  cursor: pointer;
  color: var(--color-text-inverse);

}

#mobile-nav ul .menu-has-children li a {

  text-transform: none;

}

/* Mobile Nav body classes */
/* =================================== */
/*  Homepage Styles
/* =================================== */
.section-gap {

  padding: 120px 0;

}

.banner-left .primary-btn,
.home-about-right .primary-btn,
.thumb .overlay-bg,
.about-banner {

  background: var(--color-surface-darker);

}
/* ... */

